# wordle

./: README.md  pyproject.toml
src/: wordle.py
src/wordle/: __init__.py  words.py
tests/: conftest.py  test_solver.py  test_wordle.py
