[tool.poetry]
authors = ["Gabriele N. Tornetta <phoenix1987@gmail.com>"]
description = ""
license = "GPL3+"
name = "wordle"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
wordle = 'wordle:run'
wordle-solve = "wordle:solve"
